# llmloader

./: .coveragerc  .pre-commit-config.yaml  README.rst  pyproject.toml
llmloader/: __init__.py  anthropic.py  azure.py  dummy.py  gemini.py  huggingface.py  llama.py  llama_model.py  loader.py  main.py  mistral.py  openai.py  openrouter.py  wrappers.py  xai.py
tests/: conftest.py  test_azure.py  test_dummy.py  test_main.py  test_manual.py  test_models.py  test_wrappers.py
tests/mocks/: models.py
