[tool.poetry]
name = "llmloader"
version = "0.1.0"
description = "Loads a Langchain LLM by model name as a string."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
langchain = ">=0.2.1"
langchain-openai = ">=0.1.8"
langchain-anthropic = "^0.2.4"
torch = {version = ">=2.2", extras = ["llama"]}
transformers = {version = ">=4.41.2,<=4.46.1", extras = ["llama"]}
bitsandbytes = {version = ">=0.43.1,<=0.44.1", extras = ["llama"]}
accelerate = {version = ">=0.31.0,<=1.1.0", extras = ["llama"]}
langchain-community = "^0.3.12"
langchain-huggingface = {version = "^0.1.2", extras = ["llama"]}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
llmloader = "llmloader.main:app"
