[tool.poetry]
name = "llmloader"
version = "0.1.1"
description = "Loads a Langchain LLM by model name as a string."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/rbturnbull/llmloader"
documentation = "https://github.com/rbturnbull/llmloader"


[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
langchain = ">=0.2.1"
langchain-openai = ">=0.1.8"
langchain-anthropic = "^0.2.4"
langchain-community = "^0.3.12"

torch = {version = ">=2.2", optional = true}
transformers = {version = ">=4.41.2", optional = true}
bitsandbytes = {version = ">=0.43.1", optional = true}
accelerate = {version = ">=0.31.0", optional = true}
langchain-huggingface = {version = "^0.1.2", optional = true}


[tool.poetry.extras]
llama = ["torch", "transformers", "bitsandbytes", "accelerate", "langchain-huggingface"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
llmloader = "llmloader.main:app"
